--- a/styles.css
+++ b/styles.css
@@ -1,182 +1,270 @@
-h1 {
+body {
+   background-color: #fffbf7;
+   margin: 0px;
+   padding: 0px;
+ }
+ 
+ .main {
+   margin-top: 130px;
+ }
+ 
+ .main h1 {
    color: #025157;
-    font-weight: bold;
+   font-weight: bold;
    text-align: center;
-    }
-    form {
-    text-align: center;
-    }
-    .texto_centrado {
-    text-align: center;
-    color: #46484c;
-    }
-    button {
-    color: #fff;
-    background-color: #025157;
-    }
-    body {
-    background-color: #fffbf7;
-    margin: 0px;
-    padding: 0px;
-    }
-   .header {
-      margin: 40px 20px 0px;
-      font-size: 0px;
-      height: 45px;
-      font-family: sans-serif;
-    }
-    .header > * {
-       display: inline-block;
-       font-size: 16px;
-       vertical-align: center;
-       height: 100%;
-       line-height: 45px;
-    }
-    .logo {
-       width: 15%
-    }
-    .navbar {
-       width: 70%;
-       text-align: center;
-       color: #025157;
+   font-size: 52px;
+ }
+ 
+ 
+ .main form {
+   text-align: center;
+ }
+ 
+ 
+ .texto_centrado {
+   text-align: center;
+   color: #46484c;
+ }
+ 
+ .main button {
+   color: #fff;
+   background-color: #025157;
+ }
+ 
+ 
+ .header {
+   font-size: 0px;
+   font-family: sans-serif;
+   background-color: #fffbf7;
+   padding-top: 20px;
+   padding-bottom: 20px;
+   position: absolute;
+   width: 100%;
+   flex-direction: row;
+   justify-content: space-around;
+   align-items: center;
+ }
+ 
+ .header > * {
+   display: inline-block;
+   font-size: 16px;
+   height: 100%;
+   line-height: 45px;
+ }
+ 
+ .navbar {
+   width: 70%;
+   text-align: center;
+   color: #025157;
+ }
+ 
+ .actions {
+   width: 15%;
+   text-align: right;
+   font-size: 14px;
+ }
+ 
+ .menu-item {
+   display: inline;
+   margin: 25px;
+   color: #025157;
+ }
+ 
+ .actions > * {
+   margin: 0 10px;
+ }
+ 
+ .actions a {
+   color: #67b54b
+ }
+ 
+ .actions button {
+   color: #fff;
+   background-color: #67b54b;
+   padding: 12px 14px;
+   border: none;
+   border-radius: 5px;
+ }
+ .promo {
+   display: flex;
+   width: 70%;
+   margin: 100px auto;
+   align-items: center;
+   justify-content: center;
+ }
+ 
+ .publish {
+   /* container styles if any */
+ }
+ 
+ .publish h3 {
+   font-family: sans-s;
+   font-size: 40px;
+   line-height: 48px;
+   color: #025157 ;
+ }
+ 
+ .publish > p {
+   font-size: 16px;
+   color: #343434;
+   line-height: 1.5;
+   margin-bottom: 20px;
+ }
+ 
+ .publish > form {
+   display: flex;
+ }
+ 
+ .publish > form p {
+   color: #343434;
+   margin-right: 18px;
+ }
+ 
+ .explanatory-video {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   flex: 1;
+   z-index: -10;
+ }
+ .explanatory-video img {
+   width: 120px;
+   margin-top: 10px;
+ }
+ 
+ .publish {
+   flex: 1;
+   padding: 20px;
+ }
+ 
+ .publish .email-adjust {
+   display: flex;
+   flex-direction: row;
+   justify-content: center;
+   align-items: center;
+ }
+ 
+ .promo {
+   display: flex;
+   width: 70%;
+   margin: 100px auto;
+   align-items: center;
+ }
+ 
+ 
+ .fixed-header {
+   position: fixed;
+   top: 0;
+   left: 0;
+   right: 0;
+   background-color: #fffbf7;
+   z-index: 1;
+ }
+ 
+ main {
+   margin-top: 285px;
+   text-align: center;
+ }
+ 
+ .features {
+   background-color: #025157;
+   padding: 5% 10%;
+   display: grid;
+   grid-template: repeat(2, 330px) / repeat(2, 1fr);
+ }
+ 
+ .features .feature-card {
+   position: relative;
+   z-index: auto;
+   margin-bottom: 30px;
+   margin-left: 15px;
+   margin-right: 15px;
+   background-color: #fff;
+   border: 1px solid #dadada;
+   border-radius: 5px;
+   display: flex;
+   align-items: center;
+   overflow: hidden;
+ }
+ 
+ .features .feature-card .feature-content {
+   padding: 30px 20px 40px 40px;
+   flex: 2;
+ }
+ 
+ .features .feature-card .feature-content > * {
+   margin-bottom: 1rem;
+   margin-top: 0;
+ }
+ 
+ .features .feature-card .feature-content figure {
+   margin-left: 0;
+ }
+ 
+ .features .feature-card .feature-content img {
+   width: 50px;
+ }
+ 
+ .features .feature-card .feature-content h3 {
+   font-size: 24px;
+   color: #343434;
+   font-weight: 400;
+ }
+ 
+ .features .feature-card .feature-content p {
+   font-size: 16px;
+   color: #7e7e7e;
+   font-weight: 400;
+ }
+ 
+ .features .feature-card .feature-content a {
+   font-size: 16px;
+   color: #67b54b;
+   font-weight: 600;
+   text-decoration: none;
+ }
+ 
+ .features .feature-card .feature-image {
+   flex: 1;
+   width: 40%;
+   right: -10px;
+   height: 80%;
+   transition: right 1s;
+   position: relative;
+ }
+ 
+ 
+ 
+ .features .feature-card .feature-image:hover {
+   right: 20px;
+ }
+ 
+ .features .feature-card .feature-image figure {
+   position: absolute;
+ }
+ 
+ .features .feature-card .feature-image figure,
+ .features .feature-card .feature-image img {
+   margin-top: 0;
+   height: 100%;
+ }
+ 
+ 
+ @media (max-width: 425px) {
+   .navbar,
+   .actions {
+     display: none;
    }
-    .action {
-       width: 15%;
-       text-align: right;
-       font-size: 14px;
-    }
-   .menu-item {
-      display: inline;
-      margin: 25px;
-      color: #025157;
+ 
+   .main h1 {
+     font-size: 2rem;
    }
-   .action > * {
-      margin: 0 10px;
+ 
+   .fixed-header .header .logo {
+     padding: 0 0 0 15px;
    }
-   .action a {
-      color: #67b54b
+ 
+   .banner > img {
+     width: 100%;
    }
-   .action button {
-      color: #fff;
-      background-color: #67b54b;
-      padding: 12px 14px;
-      border: none;
-      border-radius: 5px;
-   }
-   .promo {
-      display: flex;
-      width: 70%;
-      margin: 100px auto;
-      align-items: center;
-      justify-content: center;
-   }
-   .publish {
-      /* container styles if any */
-    }
-    .publish h3 {
-      font-family: sans-s;
-      font-size: 40px;
-      line-height: 48px;
-      color: #025157 ;
-    }
-    .publish > p {
-      font-size: 16px;
-      color: #343434;
-      line-height: 1.5;
-      margin-bottom: 20px;
-    }
-    .publish > form {
-      display: flex;
-    }
-    .publish > form p {
-      color: #343434;
-      margin-right: 18px;
-    }
-    .explanatory-video {
-       display: flex;
-       flex-direction: column;
-       align-items: center;
-       flex: 1;
-    }
-    .explanatory-video img {
-       width: 120px;
-       margin-top: 10px;
-    }
-    .publish {
-       flex: 1;
-    }
-    .fixed-header {
-       position: fixed;
-       top: 0;
-       left: 0;
-       right: 0;
-       background-color: #fffbf7;
-    }
-
-    .features {
-       background-color: #025157;
-       text-align: center;
-       display: grid;
-       grid-template: repeat(2, 1fr) / repeat(2, 1fr);
-       height: 660px;
-       padding: 5% 10%;
-    }
-
-    .features .feature-card {
-      margin-bottom: 30px;
-      margin-left: 15px;
-      margin-right: 15px;
-      background-color: #fff;
-      border: 1px solid #dadada;
-      border-radius: 5px;
-      display: flex;
-      align-items: center;
-      overflow: hidden;
-    }
-    
-    .features .feature-card .feature-content {
-      padding: 30px 20px 40px 40px;
-      flex: 2;
-    }
-    
-    .features .feature-card .feature-content > * {
-      margin-bottom: 1rem;
-      margin-top: 0;
-    }
-    
-    .features .feature-card .feature-content img {
-      width: 50px;
-    }
-    
-    .features .feature-card .feature-content h3 {
-      font-size: 24px;
-      color: #343434;
-      font-weight: 400;
-    }
-    
-    .features .feature-card .feature-content p {
-      font-size: 16px;
-      color: #7e7e7e;
-      font-weight: 400;
-    }
-    
-    .features .feature-card .feature-content a {
-      font-size: 16px;
-      color: #67b54b;
-      font-weight: 600;
-      text-decoration: none;
-    }
-    
-    .features .feature-card .feature-image {
-      flex: 1;
-      width: 40%;
-      position: relative;
-      right: -50px;
-      height: 80%;
-    }
-    
-    .features .feature-card .feature-image figure,
-    .features .feature-card .feature-image img {
-      margin-top: 0;
-      height: 100%;
-    }
+ }
