--- a/styles.css
+++ b/styles.css
@@ -1,303 +1,533 @@
 body {
-   background-color: #fffbf7;
-   margin: 0px;
-   padding: 0px;
- }
- 
- .main {
-   margin-top: 130px;
- }
- 
- .main h1 {
-   color: #025157;
-   font-weight: bold;
-   text-align: center;
-   font-size: 52px;
- }
- 
- 
- .main form {
-   text-align: center;
- }
- 
- 
- .texto_centrado {
-   text-align: center;
-   color: #46484c;
- }
- 
- .main button {
-   color: #fff;
-   background-color: #025157;
- }
- 
- 
- .header {
-   font-size: 0px;
-   font-family: sans-serif;
-   background-color: #fffbf7;
-   padding-top: 20px;
-   padding-bottom: 20px;
-   position: absolute;
-   width: 100%;
-   flex-direction: row;
-   justify-content: space-around;
-   align-items: center;
- }
- 
- .header > * {
-   display: inline-block;
-   font-size: 16px;
-   height: 100%;
-   line-height: 45px;
- }
- 
- .navbar {
-   width: 70%;
-   text-align: center;
-   color: #025157;
- }
- 
- .actions {
-   width: 15%;
-   text-align: right;
-   font-size: 14px;
- }
- 
- .menu-item {
-   display: inline;
-   margin: 25px;
-   color: #025157;
- }
- 
- .actions > * {
-   margin: 0 10px;
- }
- 
- .actions a {
-   color: #67b54b
- }
- 
- .actions button {
-   color: #fff;
-   background-color: #67b54b;
-   padding: 12px 14px;
-   border: none;
-   border-radius: 5px;
- }
- .promo {
-   display: flex;
-   width: 70%;
-   margin: 100px auto;
-   align-items: center;
-   justify-content: center;
- }
- 
- .publish {
-   /* container styles if any */
- }
- 
- .publish h3 {
-   font-family: sans-s;
-   font-size: 40px;
-   line-height: 48px;
-   color: #025157 ;
- }
- 
- .publish > p {
-   font-size: 16px;
-   color: #343434;
-   line-height: 1.5;
-   margin-bottom: 20px;
- }
- 
- .publish > form {
-   display: flex;
- }
- 
- .publish > form p {
-   color: #343434;
-   margin-right: 18px;
- }
- 
- .explanatory-video {
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   flex: 1;
-   z-index: -10;
- }
- .explanatory-video img {
-   width: 120px;
-   margin-top: 10px;
- }
- 
- .publish {
-   flex: 1;
-   padding: 20px;
- }
- 
- .publish .email-adjust {
-   display: flex;
-   flex-direction: row;
-   justify-content: center;
-   align-items: center;
- }
- 
- .promo {
-   display: flex;
-   width: 70%;
-   margin: 100px auto;
-   align-items: center;
- }
- 
- 
- .fixed-header {
-   position: fixed;
-   top: 0;
-   left: 0;
-   right: 0;
-   background-color: #fffbf7;
-   z-index: 1;
- }
- 
- main {
-   margin-top: 285px;
-   text-align: center;
- }
- 
- .features {
-   background-color: #025157;
-   padding: 5% 10%;
-   display: grid;
-   grid-template: repeat(2, 330px) / repeat(2, 1fr);
- }
- 
- .features .feature-card {
-   position: relative;
-   z-index: auto;
-   margin-bottom: 30px;
-   margin-left: 15px;
-   margin-right: 15px;
-   background-color: #fff;
-   border: 1px solid #dadada;
-   border-radius: 5px;
-   display: flex;
-   align-items: center;
-   overflow: hidden;
- }
- 
- .features .feature-card .feature-content {
-   padding: 30px 20px 40px 40px;
-   flex: 2;
- }
- 
- .features .feature-card .feature-content > * {
-   margin-bottom: 1rem;
-   margin-top: 0;
- }
- 
- .features .feature-card .feature-content figure {
-   margin-left: 0;
- }
- 
- .features .feature-card .feature-content img {
-   width: 50px;
- }
- 
- .features .feature-card .feature-content h3 {
-   font-size: 24px;
-   color: #343434;
-   font-weight: 400;
- }
- 
- .features .feature-card .feature-content p {
-   font-size: 16px;
-   color: #7e7e7e;
-   font-weight: 400;
- }
- 
- .features .feature-card .feature-content a {
-   font-size: 16px;
-   color: #67b54b;
-   font-weight: 600;
-   text-decoration: none;
- }
- 
- .features .feature-card .feature-image {
-   flex: 1;
-   width: 40%;
-   right: -10px;
-   height: 80%;
-   transition: right 1s;
-   position: relative;
- }
- 
- 
- 
- .features .feature-card .feature-image:hover {
-   right: 20px;
- }
- 
- .features .feature-card .feature-image figure {
-   position: absolute;
- }
- 
- .features .feature-card .feature-image figure,
- .features .feature-card .feature-image img {
-   margin-top: 0;
-   height: 100%;
- }
- 
- 
- @media (max-width: 425px) {
-   .navbar,
-   .actions {
-     display: none;
-   }
- 
-   .main h1 {
-     font-size: 2rem;
-   }
- 
-   .fixed-header .header .logo {
-     padding: 0 0 0 15px;
-   }
- 
-   .banner > img {
-     width: 100%;
-   }
- 
-   .publish > form {
-     flex-direction: column;
-   }
- 
-   .publish > form > div {
-     height: 70%;
-     margin-top: 15px;
-   }
- 
-   .publish > form > div > input {
-     width: 60%;
-   }
- 
-   .promo {
-     flex-direction: column;
-   }
- 
-   .promo .explanatory-video > video {
-     width: 80%;
-   }
- 
-   .promo .explanatory-video img {
-     display: none;
-   }
- 
-   .features {
-     grid-template: repeat(4, 400px) / 1fr;
-   }
- 
- }
+  background-color: #fffbf7;
+  margin: 0px;
+  padding: 0px;
+}
+
+.main {
+  margin-top: 70px;
+  padding: 10px;
+}
+
+.main h1 {
+  color: #025157;
+  font-weight: bold;
+  text-align: center;
+  font-size: 52px;
+  font-family: "Alegreya", serif;
+}
+
+
+.main form {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.texto_centrado {
+  text-align: center;
+  color: #46484c;
+}
+
+.main button {
+  color: #fff;
+  background-color: #025157;
+  height: 45px;
+  border-top-right-radius: 6px;
+  border-bottom-right-radius: 6px;
+  border: none;
+}
+
+.main input {
+  border-top-left-radius: 6px;
+  border-bottom-left-radius: 6px;
+  height: 45px;
+  margin-right: -5px;
+  border: 1px solid #c6c6c6;
+}
+
+.main .banner {
+  margin-top: 25px;
+  text-align: center;
+}
+
+.main .grey-text {
+  color: #a6a6a6;
+  text-align: center;
+  margin-bottom: 5px;
+}
+
+.header {
+  font-size: 0px;
+  font-family: sans-serif;
+  background-color: #fffbf7;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  position: absolute;
+  width: 100%;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.header > * {
+  display: inline-block;
+  font-size: 16px;
+  height: 100%;
+  line-height: 45px;
+}
+
+.navbar {
+  text-align: center;
+  color: #025157;
+  font-weight: 500;
+  background-color: #fffbf7;
+}
+
+.actions {
+  text-align: right;
+  font-size: 14px;
+}
+
+.menu-item {
+  display: inline;
+  margin: 25px;
+  color: #025157;
+}
+
+.actions > * {
+  margin: 0 10px;
+}
+
+.actions a {
+  color: #67b54b
+}
+
+.actions button {
+  color: #fff;
+  background-color: #67b54b;
+  padding: 12px 14px;
+  border: none;
+  border-radius: 5px;
+}
+
+.promo {
+  display: flex;
+  width: 95%;
+  margin: 70px auto;
+  align-items: center;
+  justify-content: center;
+}
+
+.publish h3 {
+  font-family: sans-s;
+  font-size: 40px;
+  line-height: 48px;
+  color: #025157 ;
+}
+
+.publish > p {
+  font-size: 16px;
+  color: #343434;
+  line-height: 1.5;
+  margin-bottom: 20px;
+}
+
+.publish > form {
+  display: flex;
+}
+
+.publish > form p {
+  color: #343434;
+  margin-right: 18px;
+}
+
+.explanatory-video {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 1;
+  z-index: -10;
+}
+.explanatory-video img {
+  width: 120px;
+  margin-top: 10px;
+}
+
+.publish {
+  flex: 1;
+  padding: 20px;
+}
+
+.publish .email-adjust {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.publish .email-adjust input {
+  border-top-left-radius: 6px;
+  border-bottom-left-radius: 6px;
+  height: 45px;
+  margin-right: -5px;
+  border: 1px solid #c6c6c6;
+  padding: 3px;
+}
+
+.publish .email-adjust button {
+  color: #fff;
+  background-color: #025157;
+  height: 45px;
+  border-top-right-radius: 6px;
+  border-bottom-right-radius: 6px;
+  border: none;
+  font-size: .75rem;
+  font-weight: 700;
+}
+
+.fixed-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: #fffbf7;
+  z-index: 1;
+}
+
+main {
+  margin-top: 285px;
+  text-align: center;
+}
+
+.features {
+  background-color: #025157;
+  padding: 5% 10%;
+  display: grid;
+  grid-template: repeat(2, 330px) / repeat(2, 1fr);
+}
+
+.features .feature-card {
+  position: relative;
+  z-index: auto;
+  margin-bottom: 30px;
+  margin-left: 15px;
+  margin-right: 15px;
+  background-color: #fff;
+  border: 1px solid #dadada;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+}
+
+.features .feature-card .feature-content {
+  padding: 30px 20px 40px 40px;
+  flex: 2;
+}
+
+.features .feature-card .feature-content > * {
+  margin-bottom: 1rem;
+  margin-top: 0;
+}
+
+.features .feature-card .feature-content figure {
+  margin-left: 0;
+}
+
+.features .feature-card .feature-content img {
+  width: 50px;
+}
+
+.features .feature-card .feature-content h3 {
+  font-size: 24px;
+  color: #343434;
+  font-weight: 400;
+}
+
+.features .feature-card .feature-content p {
+  font-size: 16px;
+  color: #7e7e7e;
+  font-weight: 400;
+}
+
+.features .feature-card .feature-content a {
+  font-size: 16px;
+  color: #67b54b;
+  font-weight: 600;
+  text-decoration: none;
+}
+
+.features .feature-card .feature-image {
+  flex: 1;
+  width: 40%;
+  right: -10px;
+  height: 80%;
+  transition: right 1s;
+  position: relative;
+}
+
+
+
+.features .feature-card .feature-image:hover {
+  right: 20px;
+}
+
+.features .feature-card .feature-image figure {
+  position: absolute;
+}
+
+.features .feature-card .feature-image figure,
+.features .feature-card .feature-image img {
+  margin-top: 0;
+  height: 100%;
+}
+
+.success-stories .stories-carousel .carousel-indicators {
+  position: initial; /** ó: position: static; */
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 15;
+  display: flex;
+  justify-content: center;
+  padding-left: 0;
+  margin-right: 15%;
+  margin-left: 15%;
+  list-style: none;
+}
+
+.success-stories .stories-carousel .card {
+  width: 80%;
+  background-color: #fff;
+  border-radius: 10px;
+  height: 564px;
+  color : #025157;
+  position: relative;
+}
+
+.success-stories .stories-carousel .card .everly {
+  background-image: url('https://getmatcha.com/wp-content/uploads/2019/05/profile-headshot-square.png');
+  height: 275px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.success-stories .stories-carousel .card .card-circle-everly {
+  position: absolute;
+  bottom: 255px;
+  right: 20px;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  overflow: hidden;
+  background-color: #f9da73;
+  background-image: url('https://getmatcha.com/wp-content/uploads/2019/05/everly_logo_blue_v3_x60@2x.png');
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  padding: 5px;
+  border: 5px solid #f9da73;
+}
+
+
+.success-stories .stories-carousel .card .summit {
+  background-image: url('https://getmatcha.com/wp-content/uploads/2019/08/0.jpg');
+  height: 275px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+
+.success-stories .stories-carousel .card .card-circle-summit {
+  position: absolute;
+  bottom: 255px;
+  right: 20px;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  overflow: hidden;
+  background-color: #81d742;
+  background-image: url('https://getmatcha.com/wp-content/uploads/2019/08/SeatoSummitLogo.png');
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  padding: 5px;
+  border: 5px solid #81d742;
+}
+
+
+.success-stories .stories-carousel .card .mambe {
+  background-image: url('https://getmatcha.com/wp-content/uploads/2019/06/matt-and-margaret_headshot.png');
+  height: 275px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+
+.success-stories .stories-carousel .card .card-circle-mambe {
+  position: absolute;
+  bottom: 255px;
+  right: 20px;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  overflow: hidden;
+  background-color: #ef7179;
+  background-image: url('https://getmatcha.com/wp-content/uploads/2019/06/mambe-logo-1.png');
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  padding: 5px;
+  border: 5px solid #ef7179;
+}
+.success-stories .stories-carousel .card .customer-title {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 23px;
+  line-height: 30px;
+  color: #000;
+  margin-bottom: 20px;
+}
+
+.success-stories .stories-carousel .card .results {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  color: #666666;
+}
+
+.card-container {
+  background-color: #a1d683;
+}
+
+.comments h1 {
+  color: #025157;
+  font-weight: bold;
+  text-align: left;
+  font-family: "Alegreya", serif;
+  font-weight: 700;
+  font-size: 51px;
+  line-height: 61px;
+  letter-spacing: -2px;
+  color: #025157;
+}
+
+.comments .btn-beefy {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  padding-top: 12px;
+  text-align: center;
+  color: #fff;
+  background: #025157;
+  border-radius: 8px;
+  height: 45px;
+  width: 166px;
+  transition: all .2s ease-in-out;
+}
+
+.comments .btn-beefy:hover {
+  background-color: #67b54b;
+  color: #fff;
+}
+
+.comments img {
+  width: 450px;
+  margin-top: 40px;
+  padding-right: 10px;
+}
+
+.success-stories .stories-carousel figure {
+  margin-top: 0;
+}
+
+@media (max-width: 425px) {
+
+
+  .navbar-light .nav-item .nav-link {
+    color: #025157;
+  }
+
+  .navbar-light .navbar-toggler {
+    border-color: #025157;
+  }
+
+  .navbar-light .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgb(3, 81, 77)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+  }
+
+  .main h1 {
+    font-size: 2rem;
+  }
+
+  .fixed-header .header .logo {
+    padding: 0 0 0 15px;
+  }
+
+  .banner > img {
+    width: 100%;
+  }
+
+  .publish > form {
+    flex-direction: column;
+  }
+
+  .publish > form > div {
+    height: 70%;
+    margin-top: 15px;
+  }
+
+  .publish > form > div > input {
+    width: 60%;
+  }
+
+  .promo {
+    flex-direction: column;
+  }
+
+  .promo .explanatory-video > video {
+    width: 80%;
+  }
+
+  .promo .explanatory-video img {
+    display: none;
+  }
+
+  .features {
+    grid-template: repeat(4, 400px) / 1fr;
+  }
+
+  .container {
+    width: 100%;
+    padding-right: 5px;
+    padding-left: 5px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+
+  .comments .btn-beefy {
+    margin-left: auto;
+    text-align: center;
+  }
+
+  .comments img {
+    width: 350px;
+    margin-top: 20px;
+    padding-right: 3px;
+    margin-bottom: 20px;
+  }
+
+  .class-container .p-5 {
+    padding: 0!important;
+  }
+}
 
 
 
